# cs336-assignment1-writeup

./: README.md  demo.py  demo1.py  main.tex  plot_batch_size_experiments.py  plot_leaderboard_experiments.py  plot_learning_rate_experiments.py  plot_prenorm_ablation.py  plot_rmsnorm_ablation.py  plot_swiglu_ablation.py  pyproject.toml  ref.bib
code/: plot_main_experiments.py  plot_rope_ablation.py
exps/ablation/prenorm2postnorm/: train_loss.csv  val_loss.csv
exps/ablation/remove_rmsnorm/: train_loss_lr1e-2.csv  train_loss_lr1e-3.csv  train_loss_lr3e-4.csv  val_loss_lr1e-2.csv  val_loss_lr1e-3.csv  val_loss_lr3e-4.csv
exps/ablation/remove_rope/: train_loss.csv  val_loss.csv
exps/ablation/swiglu2silu/: train_loss.csv  val_loss.csv
exps/batch_size/: system-gpu-mem.csv  val-loss.csv
exps/leaderboard/: train-loss.csv  val-loss.csv
exps/learning_rate/: owt-train-loss.csv  owt-train-lr.csv  owt-val-loss.csv  ts-train-loss.csv  ts-train-lr.csv  ts-val-loss.csv
exps/main/: train_loss.csv  val_loss.csv
sections/: 1-overview.tex  2-tokenizer.tex  3-transformer.tex  4-training-lm.tex  5-training-loop.tex  6-generating.tex  7-experiments.tex  appendix.tex
